added more into each page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <!DOCTYPE html>
+<html>
+<body>
+<h1>You're Invited!</h1>
+<h2>Be Our Guest</h2>
+
+<p>You are coordially invited to witness a declaration of true love between
+</br> Mr X and Miss Y </br>
+Celebration of Commitment to follow.
+</p>
+
+<ul>
+  <li><a href="./pages/rsvp.html">RSVP</a></li>
+  <li><a href="./pages/itinerary.html">Itinerary</a></li>
+  <li><a href="./pages/engagementPhotos.html">Engagement Photos</a></li>
+  <li><a href="./pages/wishlist.html">Wishlist</a></li>
+</ul>
+
+</body>
+</html>
 </body>
 </html>
