some changes to itinerary page

--- a/pages/engagementPhotos.html
+++ b/pages/engagementPhotos.html
@@ -10,5 +10,7 @@
   <li><a href="./rsvp.html">RSVP</a></li>
   <li><a href="./itinerary.html">Itinerary</a></li>
   <li><a href=".wishlist.html">Wishlist</a></li>
+
+  <h1>Engagement Photos</h1>
 </body>
 </html>
