--- a/pages/itinerary.html
+++ b/pages/itinerary.html
@@ -11,27 +11,27 @@
 <li><a href="./engagementPhotos.html">Engagement Photos</a></li>
 <li><a href="./wishlist.html">Wishlist</a></li>
 
-
+<h1>Itinerary</h1>
     <table>
   <tr>
-    <th>Category</th>
-    <th>Budget</th> 
-    <th>Done</th>
+    <th>Event</th>
+    <th>Location</th> 
+    <th>Time</th>
   </tr>
   <tr>
-    <td>Venue</td>
-    <td>4k</td>
-    <td>X</td>
+    <td>Declaration of Love - </td>
+    <td>Enchanting Forest - </td>
+    <td>2pm</td>
   </tr>
   <tr>
-    <td>Food</td>
-    <td>3k</td>
-    <td>X</td>
+    <td>Food - </td>
+    <td>Fairy Garden - </td>
+    <td>3pm</td>
   </tr>
   <tr>
-    <td>Wardrobe</td>
-    <td>2k</td>
-    <td>X</td>
+    <td>Party - </td>
+    <td>Secret Garden -</td>
+    <td>4pm</td>
   </tr>
 </table>
 </body>
