--- a/pages/rsvp.html
+++ b/pages/rsvp.html
@@ -11,12 +11,23 @@
   <li><a href="./engagementPhotos.html">Engagement Photos</a></li>
   <li><a href="./wishlist.html">Wishlist</a></li>
 
-    <form action="/action_page.php">
+  <h1>RSVP</h1>
+  <form action="/action_page.php">
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Last name:</label>
   <input type="text" id="lname" name="lname"><br><br>
+  <label for="meal">Choose a Meal:</label>
+
+<select name="meal" id="meal">
+  <option value="chicken">Chicken</option>
+  <option value="steak">Steak</option>
+  <option value="fish">Fish</option>
+  <option value="veggie">Veggie</option>
+</select></form></br>
   <input type="submit" value="Submit">
 </form>
+
+
 </body>
 </html>
