--- a/pages/engagementPhotos.html
+++ b/pages/engagementPhotos.html
@@ -9,8 +9,11 @@
   <li><a href="../index.html">Home</a></li>
   <li><a href="./rsvp.html">RSVP</a></li>
   <li><a href="./itinerary.html">Itinerary</a></li>
-  <li><a href=".wishlist.html">Wishlist</a></li>
+  <li><a href="./wishlist.html">Wishlist</a></li>
 
   <h1>Engagement Photos</h1>
+  <img src="../images/engagement0.jpg" alt="sfbsdfb" width="400" height="400">
+  <img src="../images/engagement1.jpg" alt="dsvzvf" width="400" height="400">
+  <img src="../images/engagement.jpg" alt="zfvf" width="400" height="400">
 </body>
 </html>
