--- a/pages/rsvp.html
+++ b/pages/rsvp.html
@@ -12,7 +12,7 @@
   <li><a href="./wishlist.html">Wishlist</a></li>
 
   <h1>RSVP</h1>
-  <form action="/action_page.php">
+  <form>
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Last name:</label>
