--- a/pages/itinerary.html
+++ b/pages/itinerary.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Itinerary</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
 <li><a href="../index.html">Home</a></li>
@@ -20,7 +21,7 @@
   </tr>
   <tr>
     <td>Declaration of Love - </td>
-    <td>Enchanting Forest - </td>
+    <td>Enchanted Forest - </td>
     <td>2pm</td>
   </tr>
   <tr>
