--- a/pages/engagementPhotos.html
+++ b/pages/engagementPhotos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engagement Photos</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
   <li><a href="../index.html">Home</a></li>
