--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wishlist</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <ul>
@@ -14,7 +15,7 @@
   
 </ul>
 
-<h1>Wishlist</h1>
+<h1 style="text-align: center;">Wishlist</h1>
 
 </body>
 </html>
