--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wishlist</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <style>
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    box-sizing: border-box;
+    background-color: rgb(134, 227, 250);
+}
+
+</style>
 </head>
 <body>
     <ul>
