--- a/pages/itinerary.html
+++ b/pages/itinerary.html
@@ -11,8 +11,9 @@
   <li><a href="./rsvp.html">RSVP</a></li>
 <li><a href="./engagementPhotos.html">Engagement Photos</a></li>
 <li><a href="./wishlist.html">Wishlist</a></li>
+<h1 style="text-align: center;">Itinerary</h1>
+<div class="container">
 
-<h1>Itinerary</h1>
     <table>
   <tr>
     <th>Event</th>
@@ -35,5 +36,6 @@
     <td>4pm</td>
   </tr>
 </table>
+</div>
 </body>
 </html>
