--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -12,6 +12,9 @@ body, html {
     box-sizing: border-box;
     background-color: rgb(134, 227, 250);
 }
+ a:hover {
+  background-color: rgb(19, 187, 199);
+}
 
 </style>
 </head>
