--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
-    <!DOCTYPE html>
-<html>
-<body>
+
 <h1>You're Invited!</h1>
 <h2>Be Our Guest</h2>
 
@@ -24,8 +21,7 @@ Celebration of Commitment to follow.
   <li><a href="./pages/engagementPhotos.html">Engagement Photos</a></li>
   <li><a href="./pages/wishlist.html">Wishlist</a></li>
 </ul>
+<img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExenFpdzNvcHYwaXc0ZDJpOWtjZzBhdXR4dG1ocGRzMjBvZWRjczE3ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/6hCxI5sSWBTSs2Qg1j/giphy.gif" alt="save the date" width="150px" height="150px">
 
-</body>
-</html>
 </body>
 </html>
